--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.6"
+    "@astrojs/tailwind": "^5.1.4",
+    "@tailwindcss/typography": "^0.5.16",
+    "astro": "^5.1.6",
+    "flowbite": "^2.5.2",
+    "gsap": "^3.12.5"
   }
 }
